--- a/Backend/ticket/Dockerfile
+++ b/Backend/ticket/Dockerfile
@@ -4,5 +4,6 @@ RUN apt-get install -y python-pip python-dev build-essential
 ADD . /app
 WORKDIR /app
 RUN pip install -r requirements.txt
+EXPOSE 5001
 ENTRYPOINT ["python"]
-CMD ["ticket.py"].
+CMD ["ticket.py"]
